Conexion Api y front(cbos)

--- a/TP_PROG II/FrontEnd1/FrontEnd1.csproj
+++ b/TP_PROG II/FrontEnd1/FrontEnd1.csproj
@@ -9,6 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BackEnd\BackEnd\BackEnd.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Forms\FrmConsultarPelicula.cs">
       <SubType>Form</SubType>
     </Compile>
